# csummarize

./: CMakeLists.txt  README.md  cgo_annotator.h  cgo_api.h  cgo_tools.h  pregex.hpp
etc/: csummerize.json.example
rpm/: csummerize.spec
src/cgo/: cgo_annotator.cpp  cgo_api.cpp  cgo_tools.cpp
src/pregex/: pregex.cpp
tests/: CMakeLists.txt  main.cpp
tests/data/: input.txt  words.txt
tests/units/: gtest-pregex.h
